module(
    name = "interesting_deps_example",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_swift_package_manager",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_swift_package_manager",
    path = "../..",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.27.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# The apple_support bazel_dep must come before the rules_cc.
# https://github.com/bazelbuild/apple_support#incompatible-toolchain-resolution
bazel_dep(name = "apple_support", version = "1.24.5")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(
    name = "rules_swift",
    version = "3.4.1",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "4.3.3",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.9.0",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.47.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "swift_gazelle_plugin",
    version = "0.2.1",
    dev_dependency = True,
)

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

_SPM_ENV = {
    "INTERESTING_DEPS_ENV": "1",
}

_SPM_ENV_INHERIT = [
    "INTERESTING_DEPS_INHERIT_ENV",
]

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    env = _SPM_ENV,
    env_inherit = _SPM_ENV_INHERIT,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "interesting_deps_example_swift_deps_info",
    "swiftpkg_cocoalumberjack",
    "swiftpkg_geoswift",
    "swiftpkg_libwebp_xcode",
    "swiftpkg_ocmock",
    "swiftpkg_opencombine",
    "swiftpkg_swift_log",
    "swiftpkg_swift_package_defines_example",
    "swiftpkg_swift_subprocess",
    "swiftpkg_yoti_doc_scan_ios",
)

# Example showing customization of the `swift_package` repo tool.
# To resolve: `bazel run @swift_package//:resolve`
# To update:  `bazel run @swift_package//:update`
swift_dev_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_dev_deps",
    dev_dependency = True,
)
swift_dev_deps.from_package(
    env = _SPM_ENV,
    env_inherit = _SPM_ENV_INHERIT,
    swift = "//:Package.swift",
)
swift_dev_deps.configure_swift_package(
    build_path = "spm-build",
    cache_path = "spm-cache",
    config_path = "spm-config",
    dependency_caching = False,
    manifest_cache = "none",
    manifest_caching = False,
    security_path = "spm-security",
)
use_repo(swift_dev_deps, "swift_package")
